# backend/pkg/models/issue_analysis.go
@@ -6,3 +6,14 @@ type IssueAnalysis struct {
 	PredictedSolutions string   `json:"predictedSolutions"`
 	Sources            []string `json:"sources"`
 }
+
+type IssueAnalysisReportRequest struct {
+	IssueId string `json:"issueId" bson:"_id"`
+	Reason  string `json:"reason" bson:"reason"`
+	Delete  bool   `json:"delete" bson:"delete"`
+}
+
+type IssueAnalysisReportResponse struct {
+	Acknowledged bool `json:"acknowledged"`
+	Deleted      bool `json:"deleted"`
+}
